--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "pubsub-js": "^1.9.4"
   }
 }
